--- a/EducationEverest/Web.config
+++ b/EducationEverest/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=AZEEM\SQLEXPRESS;Initial Catalog=EducationEverest;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=M-LAB-PC\SQLEXPRESS;Initial Catalog=EducationEverest;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
     <add name="EEEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AZEEM\SQLEXPRESS;initial catalog=EducationEverest;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="EducationEverestEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AZEEM\SQLEXPRESS;initial catalog=EducationEverest;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EducationEverestEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=M-LAB-PC\SQLEXPRESS;initial catalog=EducationEverest;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
